examples/test/testpolicy14701.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14701
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key25: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value2
          key3: value6
      podSelector:
        matchLabels:
          key1: value8
          key21: value37
          key41: value5
